<!--Vinh Le-->
<!--N01518620-->
<resources>
    <string name="app_name">VinhLab8</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="n01518620_humber_ca">n01518620@humber.ca</string>
    <string name="vinhLab08">VinhLab08</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out!</string>
    <string name="vinh_le">Vinh Le</string>
    <string name="exit_msg">"Do you want to exit the app ? "</string>
    <string name="no">NO\n</string>
    <string name="yes">YES\n</string>
    <string name="submit">Click here !\n</string>
    <string name="student_id">N01518620 \t</string>
    <string name="Vinh">Vinh Le \t</string>
    <string name="access_photos">Access Photos</string>
    <string name="setting">Gallery\n</string>
    <string name="grant">Permission Granted</string>
    <string name="denied">Permission denied\n</string>
    <string name="allow">Permission already granted</string>
    <string name="ask_permission">Please enable permission in app settings</string>
    <string name="enter_student_id_digits_only">Enter student ID (digits only)</string>
    <string name="id">ID:</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email:</string>
    <string name="checkbox_label">Checkbox</string>
    <string name="profile">Profile</string>
    <string name="current_time">Current Time (GMT):</string>
    <string name="vinh">Vinh:\t </string>
    <string name="error_email">Invalid input. Please check your email and ID.</string>
    <string name="pattern">Invalid email format</string>
    <string name="length">ID must be at least 6 digits long</string>
    <string name="checkbox">"Checkbox: "</string>
    <string name="checked">Checked\n</string>
    <string name="unchecked">Unchecked\n</string>
    <string name="no_data">No Data</string>
    <string name="Email">"Email: "</string>
    <string name="Id">"ID: "</string>
    <string name="le">Le </string>
    <string name="lock_orientation">Lock Orientation</string>
    <string name="vinH">Vinh </string>
    <string name="counter">Counter:\t</string>
    <string name="ID">"ID: "</string>
    <string name="action_cancel" translatable="false">Action Cancel</string>
</resources>